k8s/network-policies/10-chromadb-restricted-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: chromadb-restricted-policy
  namespace: securerag-hub
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: chromadb
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Autorise le trafic entrant uniquement depuis chatbot-manager sur le port 8000
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: chatbot-manager
      ports:
        - protocol: TCP
          port: 8000
  # ChromaDB ne doit pas initier de connexions sortantes (principe du moindre privilège)
  egress: []
